# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//test/xts/tools/build/suite.gni")

group("compileruntime") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "process_lib_standard:process_js_test",
      "url_lib_standard:url_js_test",
      "util_lib_standard:util_js_test",
#     "worker_lib_standard:worker_js_hap",
    ]
  }
}
