# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos_var.gni")
import("//test/xts/tools/build/suite.gni")

group("security") {
  testonly = true
  if (is_standard_system) {
    deps = [
      # "authentication_standard/deviceauth_p2p:DeviceauthP2PFunctionCPPTest",
      "dataprotect/huks_standard_adapter:ActsHuksStdFunctionTest",
      "deviceauth/deviceauth_function:ActsDeviceAuthFunctionTest",
      "permission/permissionkitcpp:ActsPermissionKitCPPTest",
    ]
  } else {
    deps =
        [ "permission/zpermissioninfoswitch:zpermissioninfoswitchFunctionTest" ]
  }
}
