#
# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/lite/config/component/lite_component.gni")

lite_component("hichainsdk") {
  features = [
    "//base/security/deviceauth/frameworks/deviceauth_lite/source:hichainsdk",
  ]
}

if (ohos_build_type == "debug" && ohos_kernel_type == "liteos_a") {
  group("unittest") {
    deps = ["//base/security/deviceauth/frameworks/deviceauth_lite/unittest:deviceauth_test"]
  }
}
