# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("uikit_test1") {
  deps = [
    "//test/xts/acts/graphic_lite/graphic_utils/a:ActsUiInterface1Test",
    "//test/xts/acts/graphic_lite/graphic_utils/color_posix:ActsColorTest",
    "//test/xts/acts/graphic_lite/graphic_utils/geometry2d_posix:ActsGeometyr2dTest",
    "//test/xts/acts/graphic_lite/graphic_utils/graphic_math_posix:ActsGraphicMathTest",
    "//test/xts/acts/graphic_lite/graphic_utils/heap_base_posix:ActsHeapBaseTest",
    "//test/xts/acts/graphic_lite/graphic_utils/list_posix:ActsListTest",
    "//test/xts/acts/graphic_lite/graphic_utils/mem_api_posix:ActsGraphMemApiTest",
    "//test/xts/acts/graphic_lite/graphic_utils/rect_posix:ActsRectTest",

    #"//test/xts/acts/graphic_lite/graphic_utils/sys_info_posix:ActsSysInfoTest",
    "//test/xts/acts/graphic_lite/graphic_utils/transform_posix:ActsTransformTest",
    "//test/xts/acts/graphic_lite/graphic_utils/version_posix:ActsGraphVersionTest",
  ]
}
