# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/deviceauth/hals/deviceauth_hals.gni")
import("//base/security/deviceauth/services/deviceauth.gni")
import("//build/test.gni")

module_output_path = "deviceauth_standard/deviceauth_test"

ohos_unittest("deviceauth_llt") {
  module_out_path = module_output_path
  include_dirs = [
    "./include",
    "//third_party/json/include",
    "//utils/native/base/include",
    "//foundation/communication/dsoftbus/interfaces/kits/common",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "//foundation/communication/dsoftbus/interfaces/inner_kits/transport",
  ]
  include_dirs += inc_path
  include_dirs += hals_inc_path

  sources = [
    "${hals_path}/src/common/alg_loader.c",
    "${hals_path}/src/common/common_util.c",
    "${hals_path}/src/common/hc_parcel.c",
    "${hals_path}/src/common/hc_string.c",
    "${hals_path}/src/common/hc_task_thread.c",
    "${hals_path}/src/common/hc_tlv_parser.c",
    "${hals_path}/src/common/json_utils.c",
    "${hals_path}/src/linux/standard/crypto_hash_to_point.c",
    "${hals_path}/src/linux/standard/huks_adapter.c",
    "${hals_path}/src/linux/hc_condition.c",
    "${hals_path}/src/linux/hc_file.c",
    "${hals_path}/src/linux/hc_init_protection.c",
    "${hals_path}/src/linux/hc_mutex.c",
    "${hals_path}/src/linux/hc_thread.c",
    "${hals_path}/src/linux/hc_time.c",
    "${hals_path}/src/linux/hc_types.c",
  ]
  sources += deviceauth_files
  sources += [
    "source/deviceauth_standard_test.cpp",
    "source/deviceauth_test_mock.cpp",
  ]

  deps = [
    "//base/security/huks/interfaces/innerkits/huks_standard/main:libhukssdk",
    "//third_party/cJSON:cjson_static",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "dsoftbus_standard:softbus_client",
  ]
}
