# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

################################################################
# C++, Main source file here.
################################################################
config("permission_standard_infrastructure_cxx_public_config") {
  visibility = [ ":*" ]
  include_dirs = [ "main/cpp/include" ]
}

ohos_shared_library("permission_standard_infrastructure_cxx") {
  subsystem_name = "security"
  part_name = "permission_standard"

  public_configs = [ ":permission_standard_infrastructure_cxx_public_config" ]

  include_dirs = []

  sources = [ "main/cpp/src/data_validator.cpp" ]

  deps = [ "//utils/native/base:utils" ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
