# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

group("bundlemanager") {
  testonly = true
  if (is_standard_system) {
    deps = [
      #"actsbmsallshortcutinfotest:ActsBmsAllShortcutInfoTest",
      "actsbmscheckpermissiontest:ActsBmsCheckPermissionTest",

      #"actsbmshapmoduletest:ActsBmsHapModuleTest",
      "actsbmsjstest:ActsBmsJsTest",
      "actsbmskittest:ActsBmsKitTest",

      #"actsbmsmetadatatest:ActsBmsMetaDataTest",
      "actsbmsmoduleusagerecordtest:ActsBmsModuleUsageRecordTest",
      "actsbundlemanagertest:ActsBundleManagerTest",
      "actsbundlemanageruninstall:ActsBundleManagerUninstallTest",
      "sceneProject/bmsgetinfosfifthscene:bmsThirdBundleTest5",
      "sceneProject/bmsgetinfosfirstscene:bmsThirdBundleTest1",
      "sceneProject/bmsgetinfosfirstsceneupdate:bmsThirdBundleTestA1",
      "sceneProject/bmsgetinfosfourthscene:bmsThirdBundleTest4",
      "sceneProject/bmsgetinfoshapc:bmsThirdBundleC",
      "sceneProject/bmsgetinfosjsscene:bmsThirdBundleJs",
      "sceneProject/bmsgetinfosscenesystem:bmsSystemBundleTest1",
      "sceneProject/bmsgetinfosscenevendor:bmsVendorBundleTest1",
      "sceneProject/bmsgetinfossecondscene:bmsThirdBundleTest2",
      "sceneProject/bmsgetinfosthirdscene:bmsThirdBundleTest3",
      "sceneProject/bmsmainabilityfirstscene:bmsMainAbilityFirstScene",
      "sceneProject/bmsmainabilitysecondscene:bmsMainAbilitySecondScene",
      "sceneProject/bmssceneeight:bmsJstest8",
      "sceneProject/bmsscenefive:bmsJstest5",
      "sceneProject/bmsscenefour:bmsJstest4",
      "sceneProject/bmsscenenine:bmsJstest9",
      "sceneProject/bmssceneone:bmsJstest1",
      "sceneProject/bmssceneseven:bmsJstest7",
      "sceneProject/bmsscenesix:bmsJstest6",
      "sceneProject/bmsscenethree:bmsJstest3",
      "sceneProject/bmsscenetwo:bmsJstest2",
    ]
  }
}
